# MECH-M-3-IIoT_Naegele_Schmidt

./: .gitignore  .pdm-python  Dokumentation.html  Dokumentation.qmd  pyproject.toml  readme.md
docs/: asyncapi.yml  conventions.md
docs/API_Tests/: docker-compose.yml  openapi.yml
src/Cloud/: dashbourd.json  docker-compose.yml
src/Cloud/collector/: Dockerfile  app.py
src/raspi_firmware/: code.py  settingsforGit.toml
